fix scroll bar not visible (#74)

--- a/src/app/css/_devicePnpDetailList.scss
+++ b/src/app/css/_devicePnpDetailList.scss
@@ -177,12 +177,12 @@
             width: 50%;
             position: fixed;
             top: 0;
-            float: right;
+            padding: 15px;
             height: calc(100% - #{$mastheadHeight});
-            left: 49%;
+            left: calc(50% - 30px);
             border: none;
             box-shadow: 0px 0px 50px $gray;
-            overflow-y: auto;
+            overflow: auto;
             margin-top: $mastheadHeight;
             z-index: 1;
 
